<resources>
    <!-- Application properties -->
    <string name="app_name" translatable="false">neo COCOA</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=jp.go.mhlw.covid19radar&amp;hl=ja&amp;gl=US</string>

    <!-- General expression -->
    <string name="ok">決定</string>
    <string name="ng">キャンセル</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="agree">同意する</string>
    <string name="disagree">同意しない</string>
    <string name="getting">取得中...</string>
    <string name="getting_error">取得できませんでした。</string>
    <string name="loading">読み込み中...</string>
    <string name="loading_error">読み込みエラー</string>
    <string name="NA">不明</string>
    <string name="ShutdownApp">アプリを終了する</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

  　<!-- Proof fragment -->
    <string name="title_proof">健康記録</string>
    <string name="proof_message_success_register">登録しました</string>
    <string name="proof_message_failed_register">入力に間違いがあります</string>
    <string name="proof_message_cancel_register">登録をキャンセルしました</string>
    <string name="proof_data_no_data">登録されていません</string>
    <string name="proof_title_num_of_contacts">2週間の最大危険度</string>
    <string name="proof_title_num_of_positive_person">陽性者との接触</string>
    <string name="proof_message_no_contact_with_positive">陽性者との接触はありません</string>
    <string name="proof_message_contact_with_positive">人の陽性者と接触</string>
    <string name="proof_title_body_temperature">今日の体温</string>
    <string name="proof_title_num_of_vaccine">ワクチン接種回数</string>
    <string name="proof_button_body_temperature">体温を登録</string>
    <string name="proof_unit_temperature">度</string>
    <string name="proof_button_vaccine">接種を登録</string>
    <string name="proof_unit_num">回</string>
    <string name="proof_data_un_inoculated">未接種</string>
    <string name="proof_button_share">健康記録を共有する</string>
    <string name="proof_title_update_date">更新日時</string>
    <string name="proof_dialog_message_body_temperature">体温を入力してください</string>
    <string name="proof_dialog_message_num_of_vaccine">ワクチン接種回数を入力してください</string>
    <string name="proof_dialog_message_vaccine_date">最後に接種した日付を入力してください</string>

    <!-- Hazard fragment -->
    <string name="title_hazard">ハザード</string>
    <string name="hazard_location_title">場所: </string>
    <string name="hazard_location_address">XXX 付近</string>
    <string name="hazard_location_tips"><u>表示されている位置情報について</u></string>
    <string name="hazard_time_of_stay">XXX 分間滞在中</string>
    <string name="hazard_time_of_stay_default">滞在時間を計測中...</string>
    <string name="hazard_non_contact">この場所での人との接触はまだありません。</string>
    <string name="hazard_num_of_contact">この場所で XXX 人と接触しました。</string>
    <string name="hazard_danger_level_title">危険度 : </string>
    <string name="hazard_danger_level_body">レベル XXX</string>
    <string name="hazard_danger_level_0_comment">外出の際はマスク着用をお願いします。</string>
    <string name="hazard_danger_level_1_comment">人との接触に気を付けてください。</string>
    <string name="hazard_danger_level_2_comment">やや人が多いです。気を付けてください。</string>
    <string name="hazard_danger_level_3_comment">速やかに用事を済ませましょう。</string>
    <string name="hazard_danger_level_4_comment">密状態にある可能性があります。</string>
    <string name="hazard_danger_level_5_comment">感染のリスクが極めて高いです！</string>
    <string name="hazard_what_is_danger_level"><u>危険度とは？</u></string>
    <string name="hazard_graph_title">7時間前までの接触人数の推移</string>
    <string name="hazard_graph_view_cd">接触人数の推移を示すグラフ</string>
    <string name="hazard_graph_no_data_text">現在、表示できるデータはありません。</string>
    <string name="hazard_demo_switch_title">デモンストレーションモード</string>
    <string name="hazard_demo_switch_description">ランダムな人数の接触をシミュレートして、動作を体験できます。</string>
    <string name="hazard_demo_alert_dialog_title">デモンストレーションモードの変更</string>
    <string name="hazard_demo_alert_dialog_description">設定を変更するにはアプリの再起動が必要です。\nボタンを押してアプリを終了し、もう一度起動しなおしてください。</string>

    <!-- HOME fragment -->
    <string name="title_home">ホーム</string>
    <string name="home_title_active">動作中</string>
    <string name="home_title_stop">停止中</string>
    <string name="home_title_positive_person">陽性者との接触数</string>
    <string name="home_title_register_positive">陽性と診断されたら</string>
    <string name="home_detail_register_positive">周りの人たちを守るために匿名での陽性登録へのご協力をお願いいたします。</string>
    <string name="home_button_register_positive">陽性情報の登録</string>
    <string name="home_toast_register_positive">陽性情報を登録しました。\nご協力ありがとうございます。</string>
    <string name="home_title_share">本アプリを広めましょう</string>
    <string name="home_detail_share">本アプリは多くの方にお使いいただくほど効果を発揮します。</string>
    <string name="home_button_share">アプリを共有する</string>


    <!-- Information fragment -->
    <string name="title_information">お知らせ</string>
    <string name="information_title_num_of_new_positive_person">新規陽性者数の推移</string>
    <string name="information_title_infection_status">現在の感染状況</string>
    <string name="information_title_new_information">新着情報(外部リンク)</string>
    <string name="information_title_whole_country">全国</string>
    <string name="information_title_current_location">東京都</string>
    <string name="information_title_compared_to_the_previous_day">前日比</string>
    <string name="information_unit_people">人</string>
    <string name="information_button_show_details">詳細情報を見る</string>
    <string name="information_button_view_more">さらに表示</string>
    <array name="information_recycler_list">

    </array>
    <string name="information_title_update_date">情報取得日:</string>

    <!-- Settings fragment -->
    <string name="title_settings">設定</string>
    <string name="settings_bgnotification_title">バックグラウンドハザード通知</string>
    <string name="settings_bgnotification_description">アプリを開いていない時や画面をロックしているときでも
        ハザード通知を受けるには、この設定をオンにします。</string>
    <string name="settings_quit_title">アプリの使用中止</string>
    <string name="settings_quit_description">使用を中止して過去14日間の接触履歴を消去</string>
    <string name="settings_quit_button_text">使用中止</string>
    <string name="settings_quit_ad_title">アプリの使用中止します</string>
    <string name="settings_quit_ad_descripstion">すべてのデータを削除して、アプリの使用を中止します。
        よろしいですか？</string>
    <string name="settings_version_title">アプリのバージョン :</string>
    <string name="settings_inquiry_title">お問い合わせ</string>
    <string name="settings_termsOfService_title">利用規約</string>
    <string name="settings_privacyPolicy_title">プライバシーポリシー</string>
    <string name="settings_webAccessibilityPolicy">ウェブアクセシビリティ方針</string>
    <string name="settings_shareThisapp_button">アプリを周りの人に知らせる</string>
    <string name="settings_shareThisapp_description">さらに多くの人にCOCOAを使ってもらえるように、
        アプリを広めてください！</string>

    <!-- AppLocationProvider class -->
    <string name="appLocationProvider_request_dialog_title">このアプリは位置情報を以下の目的で使用します。</string>
    <string name="appLocationProvider_request_dialog_message">・現在地の都道府県のニュースを取得します。\n
                                                                ・ハザード機能が正常に動作するには正確な位置情報が必要です。\n
                                                                ・バックグラウンドハザード通知を使用するには位置情報を"常に許可"にしていただく必要があります。\n
                                                                尚、取得した位置情報は端末内でのみ使用し、外部への送信は一切ありません。</string>
    <string name="appLocationProvider_goToSettings_dialog_title">アプリの位置情報アクセスを許可してください</string>
    <string name="appLocationProvider_goToSettings_dialog_message">端末の設定画面より位置情報アクセスを許可してください。</string>
    <string name="appLocationProvider_positiveButton_title">位置情報アクセスを設定する</string>
</resources>