<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_proof"
        android:icon="@drawable/ic_proof"
        android:title="@string/title_proof" />

    <item
        android:id="@+id/navigation_hazard"
        android:icon="@drawable/ic_hazard1"
        android:title="@string/title_hazard" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_infomation"
        android:icon="@drawable/ic_infomation"
        android:title="@string/title_infomation" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>